src/snapshots/ir__tokenizer__tests__bang.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token: Bang
- loc:
    line: 1
    col: 1
  token:
    Number: 1
