src/snapshots/ir__tokenizer__tests__equal_equal.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    Number: 2
- loc:
    line: 1
    col: 1
  token: EqualEqual
- loc:
    line: 1
    col: 1
  token:
    Number: 3
