src/snapshots/ir__tokenizer__tests__for_loop.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    Keyword: For
- loc:
    line: 1
    col: 5
  token: LeftParen
- loc:
    line: 1
    col: 5
  token:
    Keyword: Let
- loc:
    line: 1
    col: 9
  token:
    Identifier: i
- loc:
    line: 1
    col: 11
  token: Equal
- loc:
    line: 1
    col: 1
  token:
    Number: 0
- loc:
    line: 1
    col: 2
  token: Semicolon
- loc:
    line: 1
    col: 1
  token:
    Identifier: i
- loc:
    line: 1
    col: 3
  token: LeftAngle
- loc:
    line: 1
    col: 1
  token:
    Number: 10
- loc:
    line: 1
    col: 3
  token: Semicolon
- loc:
    line: 1
    col: 1
  token:
    Identifier: i
- loc:
    line: 1
    col: 3
  token: Plus
- loc:
    line: 1
    col: 3
  token: RightParen
- loc:
    line: 1
    col: 1
  token: LeftSquiggly
- loc:
    line: 1
    col: 1
  token:
    Keyword: Print
- loc:
    line: 1
    col: 7
  token:
    Identifier: i
- loc:
    line: 1
    col: 9
  token: Semicolon
- loc:
    line: 1
    col: 1
  token: RightSquiggly
